src/pages/pages.css
@keyframes imageAnimation {
  0% {
    animation-timing-function: ease-in;
    opacity: 0;
  }
  8% {
    animation-timing-function: ease-out;
    opacity: 1;
  }
  17% {
    opacity: 1 12
  }
  25% {
    opacity: 0 15
  }
  100% {
    opacity: 0 18
  }
}

.home {
  background-color: black;
  background-image: url("../../dist/images/room.jpg");
  height: 100vh;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.page {
  background-color: black;
  background-size: 100%;
  min-height: 100vh;
}

@keyframes example {
  from {
    background-color: white;
  }
  to {
    background-color: purple;
  }
}

.an {
  width: 5vw;
  height: 10vh;
  background-color: black;
  transition: height 1s;
}

.an:hover {
  height: 92vh;
  animation-name: example;
  animation-duration: 0.5s;
  animation-fill-mode: forwards;
}

.flex {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.title {
  font-size: 100px;
  color: white;
  line-height: 100px;
}

.mobile-title {
  font-size: 250px;
  color: white;
  line-height: 250px;
  text-align: center;
}

.loc {
  text-align: right;
  color: rgb(100, 100, 100);
  margin-left: auto;
}

.appear {
  animation-name: appear;
  animation-duration: 1s;
}

@keyframes appear {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes disappear {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

a:hover {
  text-decoration: none;
}

.img {
  display: 'block';
  width: 100%;
  padding: 2px;
}

.gallery {
  width: 71vw;
  margin-right: 5vw;
  margin-left: auto;
}

.mobile-img {
  display: 'block';
  width: 100%;
  padding-bottom: 20px;
}

.appear-first {
  animation-name: appear;
  animation-duration: 2s;
  animation-fill-mode: forwards;
}

.appear-second {
  animation-name: appear;
  animation-duration: 2.5s;
  animation-fill-mode: forwards;
}

.appear-third {
  animation-name: appear;
  animation-duration: 3s;
  animation-fill-mode: forwards;
}

.appear-fourth {
  animation-name: appear;
  animation-duration: 3.5s;
  animation-fill-mode: forwards;
}

.appear-fifth {
  animation-name: appear;
  animation-duration: 4s;
  animation-fill-mode: forwards;
}

.ril__caption, .ril__toolbar {
  background-color: rgb(0, 0, 0, 0) !important;
}

.ril__zoomInButton {
  background: none !important;
}

.ril__zoomOutButton {
  background: none !important;
}

.about-top {
  width: 98vw;
  display: flex;
  align-items: flex-end;
  align-content: flex-start;
  margin-bottom: 30px;
}

.about-top-img {
  width: 60vw;
  margin-right: 30px;
}

.about-top-text {
  width: 20vw;
  color: rgb(221, 221, 221);
  font-size: 12px;
}

.about-bottom {
  width: 98vw;
  display: flex;
  align-items: flex-start;
  align-content: flex-start;
}

.about-bottom-img {
  width: 30vw;
  margin-right: 30px;
  margin-left: 2vw;
  margin-bottom: 50px;
}

.about-bottom-text {
  width: 28vw;
  color: rgb(221, 221, 221);
  font-size: 12px;
}

.about-bottom-left-text {
  width: 28vw;
  text-align: right;
  color: rgb(221, 221, 221);
  font-size: 12px;
}

.photo-flex {
  display: flex;
  justify-content: left;
}

@media (max-width: 500px) {
  .about-top-img {
    width: 100vw;
    margin-right: 0;
  }
  .about-top-text {
    width: 98vw;
    color: rgb(221, 221, 221);
    font-size: 10px;
    padding: 2px;
  }
  .about-bottom-img {
    width: 100vw;
    margin-right: 0;
    margin-left: 0;
    margin-bottom: 0;
  }
  .about-bottom-text {
    width: 98vw;
    color: rgb(221, 221, 221);
    font-size: 10px;
    padding: 2px;
  }
  .about-bottom-left-text {
    text-align: left;
    width: 98vw;
    color: rgb(221, 221, 221);
    font-size: 10px;
    padding: 2px;
  }
  .home {
    background-image: url("../../dist/images/mobile-room.jpg");
  }
}

c {
  color: rgb(0, 255, 255) !important;
}

.grid {
  display: grid;
  grid-template-columns: 10vw 10vw 10vw 10vw 10vw 10vw 10vw 10vw 10vw 10vw;
  /* grid-template-columns: 25vw 25vw 25vw 25vw; */
  grid-template-rows: 100vh 40vw 100vh 40vw 100vh 40vw;
}

.indulgent {
  background-color: black;
  background-image: url("../../dist/images/music/indulgent/drums.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  grid-column-start: 1;
  grid-column-end: 11;
  grid-row-start: 1;
  grid-row-end: 2;
  overflow: hidden;
}

.indulgent-cover {
  background-color: black;
  background-image: url("../../dist/images/music/indulgent/cover.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  grid-column-start: 1;
  grid-column-end: 5;
  grid-row-start: 2;
  grid-row-end: 3;
}

.indulgent-guitar1 {
  background-image: url("../../dist/images/music/indulgent/guitar1.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  grid-column-start: 5;
  grid-column-end: 8;
  grid-row-start: 2;
  grid-row-end: 3;
}

.indulgent-guitar2 {
  background-image: url("../../dist/images/music/indulgent/guitar2.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  grid-column-start: 8;
  grid-column-end: 11;
  grid-row-start: 2;
  grid-row-end: 3;
}

.indulgent-cover-overlay {
  animation-name: disappear;
  animation-duration: .7s;
  width: 100%;
  height: 100%;
  background-color: rgb(255, 255, 255, .3);
  opacity: 0;
  font-size: 100px;
  color: white;
}

.indulgent-cover-overlay:hover {
  opacity:1.0;
  animation-name: appear;
  animation-duration: .7s;
}

.indulgent-guitar1:hover ~ .indulgent-cover > .indulgent-cover-overlay {
  opacity:1.0;
  animation-name: appear;
  animation-duration: .7s;
}

.indulgent-guitar2:hover ~ .indulgent-cover > .indulgent-cover-overlay {
  opacity:1.0;
  animation-name: appear;
  animation-duration: .7s;
}

.mjf {
  background-image: url("../../dist/images/music/mjf/mjf.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  grid-column-start: 1;
  grid-column-end: 11;
  grid-row-start: 3;
  grid-row-end: 4;
  overflow: hidden;
}

.mjf-cover {
  background-image: url("../../dist/images/music/mjf/cover.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  grid-column-start: 7;
  grid-column-end: 11;
  grid-row-start: 4;
  grid-row-end: 5;
}

.mjf-studio {
  background-image: url("../../dist/images/music/mjf/studio.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  grid-column-start: 1;
  grid-column-end: 7;
  grid-row-start: 4;
  grid-row-end: 5;
}

.mjf-studio:hover + .mjf-cover > .mjf-cover-overlay {
  opacity:1.0;
  animation-name: appear;
  animation-duration: .7s;
}

.mjf-cover-overlay {
  animation-name: disappear;
  animation-duration: .7s;
  width: 100%;
  height: 100%;
  background-color: rgb(255, 255, 255, .3);
  opacity: 0;
  font-size: 100px;
  color: white;
}

.mjf-cover-overlay:hover {
  opacity:1.0;
  animation-name: appear;
  animation-duration: .7s;
}

.cg {
  background-image: url("../../dist/images/music/cg/cg.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  grid-column-start: 1;
  grid-column-end: 11;
  grid-row-start: 5;
  grid-row-end: 6;
  overflow: hidden;
}

.cg-cover {
  background-image: url("../../dist/images/music/cg/cover.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  grid-column-start: 1;
  grid-column-end: 5;
  grid-row-start: 6;
  grid-row-end: 7;
}

.cg-guitar {
  background-image: url("../../dist/images/music/cg/1.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  grid-column-start: 5;
  grid-column-end: 11;
  grid-row-start: 6;
  grid-row-end: 7;
}

.cg-cover-overlay {
  animation-name: disappear;
  animation-duration: .7s;
  width: 100%;
  height: 100%;
  background-color: rgb(255, 255, 255, .3);
  opacity: 0;
  font-size: 100px;
  color: white;
}

.cg-cover-overlay:hover {
  opacity:1.0;
  animation-name: appear;
  animation-duration: .7s;
}

.cg-guitar:hover + .cg-cover > .cg-cover-overlay {
  opacity:1.0;
  animation-name: appear;
  animation-duration: .7s;
}

.cover-flex {
  display: flex;
  justify-content: center;
  align-items: center;
}

.cover-flex a {
  color: inherit;
}

